# astro-orchestra

./: .gitignore  PROJECT_STATUS.md  README.md  chat_with_orchestrator.py  mcp_config.json  pause.md  plan.md  pyproject.toml  requirements.txt
agent/: pyvenv.cfg
config/: __init__.py  settings.py  tool_configs.py
examples/: basic_research_task.py
src/: __init__.py  models.py
src/agents/: __init__.py  analysis.py  base.py  data_gathering.py  literature_reviewer.py  orchestrator.py  planning.py  theorist_simulation.py
src/mcp/: __init__.py  server.py
src/state/: __init__.py  agent_state.py
src/utils/: logging.py
src/workflow/: __init__.py  graph_builder.py
tests/: __init__.py
tests/test_agents/: test_orchestrator.py
